sumo/tests/traci/VariableRetrieval/POI/errors/UnsupportedVariable/testclient.prog
simstep 5 1
getvariable 167 255 dummy
simstep 6 1
